# sgl

./: .gitignore  CMakeLists.txt  README.md
doc/: TODO.md  devlog.md  graphics_pipeline.md  tutorials.md
include/: ppl_core.h  ppl_shader.h  ppl_texture.h  sgl.h  sgl_Assimp.h  sgl_SDL.h  sgl_SDL2.h  sgl_config.h  sgl_math.h  sgl_model.h  sgl_pass.h  sgl_pipeline.h  sgl_pipeline_wireframe.cpp  sgl_pipeline_wireframe.h  sgl_shader.h  sgl_texture.h  sgl_utils.h  tv_SDL.h  tv_context.h  tv_math.h  tv_model.h  tv_pipeline.h  tv_surface.h  tv_types.h
include/zip/: miniz.h  zip.h
src/: main.cpp  ppl_core.cpp  ppl_core.h  ppl_math.h  ppl_shader.cpp  ppl_shader.h  ppl_texture.cpp  ppl_texture.h  ppl_utils.h  sgl_Assimp.cpp  sgl_SDL.cpp  sgl_SDL2.cpp  sgl_model.cpp  sgl_pass.cpp  sgl_pipeline.cpp  sgl_pipeline_wireframe.cpp  sgl_shader.cpp  sgl_texture.cpp  tv.cpp  tv_context.cpp  tv_context_impl.h  tv_model.cpp  tv_model_impl.h  tv_pipeline.cpp  tv_pipeline_impl.h  tv_surface.cpp  tv_types.cpp
src/zip/: zip.c
tests/: test_bone_anim.cpp  test_buffer.cpp  test_coord_sys.cpp  test_hello_world.cpp  test_sk_anim.cpp  test_skeletal_anim.cpp
